public class SistemaImpl {
    public void MainFrame() {
        MainFrame iniciarSesion = new MainFrame();
    }
}
